--- a/index.html
+++ b/index.html
@@ -1,28 +1,56 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Flatiron Task Lister</title>
-  <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-  <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Flatiron Task Lister</title>
+    <link rel="stylesheet" href="./style.css" />
+    <!-- FONT AWESOME CDN LINK -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- GOOGLE FONTS LINK -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100;200;500;700&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,700;1,400&family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,500;0,6..12,800;1,6..12,200;1,6..12,300;1,6..12,700&family=Poppins:ital,wght@0,100;0,200;0,400;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,100;0,400;0,500;0,900;1,400&family=Ysabeau+Office:ital,wght@0,1;0,400;1,100&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="main-content">
+      <h1>Task Lister Lite™️</h1>
+      <hr>
+      <div class="form">
+        <form id="create-task-form" action="" method="POST">
+          <label for="new-task-description">Task description:</label>
+          <input
+            type="text"
+            id="new-task-description"
+            name="new-task-description"
+            placeholder="description"
+          />
+<div class="priority">
+          <label for="priority">Priority:</label>
+                <select id="priority" name="priority">
+                    <option value="low">Low</option>
+                    <option value="medium">Medium</option>
+                    <option value="high">High</option>
+                </select>
+              </div>
+          <input id="submit" type="submit" value="Create New Task" />
+        </form>
+      </div>
+      <div id="list">
+        <h2>My Todos</h2>
+        <ul id="tasks">
+          <!-- <span class="task-text">Todo item 1</span>
+          <button class="edit-button"><i class="fas fa-edit edit-icon"></i></button>
+          <button class="remove-button"><i class="fas fa-trash-alt remove-icon"></i></button> -->
+          <div class="btn">
+        </div>
+        </div>
+        </ul>
+      </div>
 
-    <form id="create-task-form" action="" method="POST">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
-      <input type="submit" value="Create New Task">
-    </form>
-
-    <div id="list">
-      <h2>My Todos</h2>
-      <ul id="tasks">
-      </ul>
+      <script src="./src/index.js"></script>
     </div>
-
-    <script src="./src/index.js"></script>
-  </div>
-
-</body>
+  </body>
 </html>
